# Gra-turowa

./: CMakeLists.txt  README.md  enemy.cpp  enemy.hpp  game.cpp  game.hpp  main.cpp
Pokemons/: pokemon.cpp  pokemon.hpp
Skills/: air_blessing.cpp  air_blessing.hpp  earthquake.cpp  earthquake.hpp  fire_tornado.cpp  fire_tornado.hpp  gear_up.cpp  gear_up.hpp  healing_water.cpp  healing_water.hpp  ice_storm.cpp  ice_storm.hpp  special_skill.cpp  special_skill.h
